# RetrofitApiTemplateAndroid

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/teka/android/retrfitapitemplate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/teka/android/retrfitapitemplate/: MainActivity.kt  MainViewModel.kt
app/src/main/java/teka/android/retrfitapitemplate/data/remote/retrofit/: DiscoverMovieResponse.kt  HeaderInterceptor.kt  MovieService.kt  RetrofitProvider.kt
app/src/main/java/teka/android/retrfitapitemplate/keys/: AppKeys.kt
app/src/main/java/teka/android/retrfitapitemplate/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/teka/android/retrfitapitemplate/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
