cmake_minimum_required(VERSION 3.4.1)

add_library( # Specifies the name of the library.
        native-lib

        # Sets the library as a shared library.
        SHARED

        # Provides a relative path to your source file(s).
        native-lib.cpp )

# Specifies a path to native header files.
include_directories(${CMAKE_SOURCE_DIR}/include)
